--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<tr>
 		<td>
 			<a href="https://www.kimika.com.br/vestido-curto-com-sobreposicao-de-babados-caramelo">
-				<img src="https://i.imgur.com/7gUgQJG.png" width="600" style="display: block" height="568" border="0" alt=""></a></td>
+				<img src="https://i.imgur.com/KLd99xo.png" width="600" style="display: block" height="568" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
