--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table id="Table_01" width="600" height="2240" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="https://i.imgur.com/j3kLiPI.png" width="600" style="display: block" height="904" border="0" alt=""></td>
+			<img src="https://i.imgur.com/SNR3Dkh.png" width="600" style="display: block" height="904" border="0" alt=""></td>
 	</tr>
 	<tr>
 		<td>
